--- a/content/classes/2024/Latin-Ballroom-Sequence.mdx
+++ b/content/classes/2024/Latin-Ballroom-Sequence.mdx
@@ -1,7 +1,7 @@
 ---
 title: Latin Ballroom Sequence
 details: ''
-artist: content/artists/kayleigh-and-korey.mdx
+artist: 
 date: 2024-12-01T12:00:00.000Z
 location: sefton
 level: beginner
